Update GUIManager.java